apps/copyparty/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: copyparty
  namespace: copyparty
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Copyparty"
    gethomepage.dev/group: "Files & Documents"
    gethomepage.dev/icon: "mdi-folder-network"
    gethomepage.dev/description: "File server"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-copyparty
  hostnames:
    - copyparty.stevevaradi.me
  rules:
    - backendRefs:
        - name: copyparty
          port: 3923
